--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-auth-kit": "^3.0.2-alpha.19",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"typescript": "^5.3.3",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
